# JustTracer

./: Application.cpp  CMakeLists.txt  Camera.h  Camera.hpp  Film.h  Integrator.h  Intersection.h  Light.hpp  Material.hpp  Math.h  Math.hpp  Object.h  Object.hpp  README.md  Random.h  Ray.h  Ray.hpp  Remap.cpp  Renderer.h  Renderer.hpp  Sampler.h  Scene.h  Scene.hpp  Shape.h  Sphere.h  Sphere.hpp  Vector.h  Vector.hpp  main.cpp
Accelerator/: AABB.cpp  AABB.h  BVH.cpp  BVH.h  KDTree.h
BxDF/: BxDF.h  IdealDiffuseBxDF.cpp  IdealDiffuseBxDF.h  IdealSpecularBxDF.cpp  IdealSpecularBxDF.h  MicrofacetBxDF.cpp  MicrofacetBxDF.h  MicrofacetSpecularBxDF.cpp  MicrofacetSpecularBxDF.h  SpecularBxDF.cpp  SpecularBxDF.h
Camera/: Camera.h  Camera.hpp  ICamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
Common/: AABB.h  BVH.h  BxDF.h  BxDFResult.h  Camera.h  Global.h  HitResult.h  Integrator.h  Light.h  LightResult.h  Material.h  Math.h  Matrix4.h  Object.h  Ray.h  Sampler.h  Vector.h
Integrator/: IIntegrator.h  Integrator.h  MonteCarloPathIntegrator.cpp  MonteCarloPathIntegrator.h  NormalIntegrator.cpp  NormalIntegrator.h  PathIntegrator.h  SimplePathIntegrator.cpp  SimplePathIntegrator.h
Light/: AreaLight.h  Light.h  SphereLight.h
Material/: DiffuseMaterial.cpp  DiffuseMaterial.h  IMaterial.h  Material.h  MicrofacetMaterial.cpp  MicrofacetMaterial.h  MirrorMaterial.cpp  MirrorMaterial.h  ReflectMaterial.cpp  ReflectMaterial.h  RefractMaterial.h
Math/: Global.h  Math.h  Matrix4.h  Random.h  Vector.h  Vector2.h
Object/: IIntersect.h  ILight.h  Model.cpp  Model.h  Rectangle.cpp  Rectangle.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
Renderer/: Camera.cpp  Camera.h  Film.cpp  Film.h  Integrator.h  Renderer.cpp  Renderer.h  Sampler.cpp  Sampler.h  Scene.cpp  Scene.h  World.cpp  World.h
Sampler/: ISampler.h  Sampler.h  TrapezoidalSampler.cpp  TrapezoidalSampler.h
Shape/: Mesh.h  Model.h  Object.h  Sphere.h  Texture.h  Triangle.h  Vertex.h
Test/: CornellBox.h  Remap.h
Tool/: Global.h  Vector.h  Vector2.h  Vector3.h  Vector4.h
